Changed header buttons

--- a/assets/scss/components/header.scss
+++ b/assets/scss/components/header.scss
@@ -22,6 +22,9 @@ body > header {
 		border-radius: 10rem;
 		overflow: hidden;
 
+		display: flex;
+		align-items: center;
+
 		img {
 			width: 2rem;
 			height: 2rem;
