--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -4,16 +4,57 @@
 	box-sizing: border-box;
 }
 
-html,
 body {
-	min-height: 100%;
+	min-height: 100vh;
+
+	overflow: overlay;
+
+	display: flex;
+	flex-direction: column;
+
+	font-family: var(--fontFamilyPrimary);
+	font-size: var(--fontSizeMD);
+
+	background-color: var(--colorBase1);
+	color: var(--colorText);
 }
 
-body {
-	font-family: var(--font-family-primary);
-	font-size: 16px;
-	background-color: var(--color-base-1);
-	color: var(--color-text);
+body > * {
+	width: 100%;
+
+	& > * {
+		position: relative;
+		& {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+	}
+
+	&:not(main) {
+		a,
+		button {
+			&:hover,
+			&:focus {
+				color: var(--colorPrimary100);
+				transform: scale(1.1);
+			}
+
+			&:active {
+				color: var(--colorSecondary100);
+				transform: scale(0.95);
+			}
+		}
+
+		& > * {
+			flex-direction: row;
+			justify-content: center;
+		}
+	}
+}
+
+main {
+	padding: 2rem clamp(1rem, 5vw, 2rem);
 }
 
 img {
@@ -21,90 +62,52 @@ img {
 }
 
 a,
-a:visited,
 button {
+	transition: color 200ms, background-color 200ms, transform 200ms;
+}
+
+a,
+a:visited {
 	color: inherit;
-	font-size: inherit;
 	text-decoration: none;
-	background: none;
+}
+
+input,
+textarea,
+button {
 	border: none;
-	outline: none;
+	background: none;
+	color: inherit;
+	font-family: inherit;
+	font-size: inherit;
 	cursor: pointer;
-	transition: color 200ms ease-in-out, background-color 200ms ease-in-out, opacity 200ms ease-in-out,
-		transform 200ms ease-in-out;
-
-	&:hover {
-		color: var(--color-primary-100);
-		transform: scale(1.1);
-	}
-
-	&:focus-visible {
-		outline: auto var(--color-dark);
-		color: var(--color-primary-100);
-		transform: scale(1.1);
-	}
-
-	&:active {
-		color: var(--color-secondary-100);
-		transform: scale(0.95);
-	}
 }
 
 label {
 	display: block;
 	cursor: pointer;
-	padding-bottom: 0.25rem;
-	transition: color 200ms ease-in-out;
-
-	&:hover {
-		color: var(--color-primary-100);
-	}
-
-	&.error {
-		color: var(--color-error);
-	}
-
-	&.success {
-		color: var(--color-success);
-	}
 }
 
-input,
-textarea {
-	font-family: var(--font-family-primary);
-	font-size: var(--font-size-md);
-	color: var(--color-text);
-	background-color: var(--color-base-2);
-	border: 1px solid var(--color-text);
-	border-radius: 0.25rem;
-	padding: 0.5rem;
-	transition: border-color 200ms ease-in-out, background-color 200ms ease-in-out;
-
-	&:hover {
-		border-color: var(--color-primary-100);
-	}
-
-	&:focus-visible {
-		outline: auto var(--color-dark);
-	}
-
-	&:disabled {
-		opacity: 0.5;
-	}
-
-	&.error {
-		border-color: var(--color-danger-100);
-	}
-
-	&.success {
-		border-color: var(--color-success-100);
-	}
+ul {
+	list-style: none;
 }
 
-main {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap: 1rem;
-	padding: 1.5rem clamp(0.5rem, 2vw, 1.5rem);
+::-webkit-scrollbar {
+	width: 1rem;
+}
+
+::-webkit-scrollbar-thumb {
+	border: 0.25rem solid transparent;
+	border-radius: 1rem;
+
+	background-color: var(--colorShadow50);
+	background-clip: content-box;
+
+	&:hover {
+		background-color: var(--colorPrimary50);
+	}
+
+	&:active {
+		background-color: var(--colorSecondary50);
+	}
 }
