--- a/assets/scss/components/navigation.scss
+++ b/assets/scss/components/navigation.scss
@@ -1,26 +1,19 @@
 body > nav {
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	padding: 0.5rem 1.5rem;
-	background-color: var(--color-base-3);
+	padding: 0.5rem clamp(1rem, 5vw, 2rem);
 
-	& > div[class*="width-container-"] {
-		width: 100%;
-		display: flex;
-		justify-content: center;
-		align-items: center;
+	box-shadow: 0 0.25rem 0.5rem var(--colorShadow20);
 
-		@media screen and (min-width: 700px) {
-			justify-content: space-between;
-		}
-	}
+	position: sticky;
+	top: 0;
+
+	z-index: 1;
+
+	background-color: var(--colorBase3);
 
 	ul {
-		display: flex;
-		list-style: none;
-		gap: 0.625rem;
+		display: none;
+		justify-content: center;
+		gap: 0.75rem;
 
 		li a {
 			display: flex;
@@ -33,27 +26,19 @@ body > nav {
 		display: flex;
 		align-items: center;
 		gap: 0.25rem;
+	}
 
-		@media screen and (min-width: 700px) {
+	@media screen and (min-width: 500px) {
+		& > div {
+			justify-content: space-between;
+		}
+
+		ul {
+			display: flex;
+		}
+
+		button {
 			display: none;
-		}
-	}
-
-	.left {
-		display: none;
-		justify-content: center;
-
-		@media screen and (min-width: 700px) {
-			display: flex;
-		}
-	}
-
-	.right {
-		display: none;
-		justify-content: center;
-
-		@media screen and (min-width: 700px) {
-			display: flex;
 		}
 	}
 }
