--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,4 +5,4 @@
 @import "components/header", "components/navigation", "components/footer";
 
 // Pages
-@import "pages/home", "pages/auth";
+@import "pages/home", "pages/overview";
