Simplify project to reach deadline

--- a/.old/assets/scss/main.scss
+++ b/.old/assets/scss/main.scss
@@ -5,4 +5,4 @@
 @import "components/header", "components/navigation", "components/footer";
 
 // Pages
-@import "pages/home", "pages/overview";
+@import "pages/home", "pages/wishlists";
