--- a/.old/assets/scss/utilities.scss
+++ b/.old/assets/scss/utilities.scss
@@ -17,15 +17,15 @@
 }
 
 .iconSM {
-	font-size: 1rem;
+	font-size: 1rem !important;
 }
 
 .iconMD {
-	font-size: 1.5rem;
+	font-size: 1.5rem !important;
 }
 
 .iconLG {
-	font-size: 2rem;
+	font-size: 2rem !important;
 }
 
 [class^="widthContainer"],
