--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -6,4 +6,4 @@
 	"components/modal";
 
 // Pages
-@import "pages/home", "pages/overview", "pages/wishlist";
+@import "pages/home", "pages/wishlists";
