--- a/assets/sass/components/modal.scss
+++ b/assets/sass/components/modal.scss
@@ -16,6 +16,7 @@
 
 	& > div {
 		width: auto;
+
 		padding: 1rem;
 
 		background-color: var(--colorBase1);
@@ -26,6 +27,11 @@
 		display: flex;
 		flex-direction: column;
 		gap: 1rem;
+
+		@media screen and (max-width: 500px) {
+			width: 100%;
+			border-radius: 0;
+		}
 
 		button {
 			transition: background-color 0.2s, border-color 0.2s, transform 0.2s, box-shadow 0.2s,
@@ -132,6 +138,8 @@
 			gap: 0.5rem;
 
 			input {
+				width: 100%;
+
 				border: 1px solid var(--colorBase10);
 				border-radius: 0.25rem;
 
