--- a/assets/sass/pages/wishlists.scss
+++ b/assets/sass/pages/wishlists.scss
@@ -1,4 +1,4 @@
-.pageOverview {
+.pageWishlists {
 	align-items: center;
 
 	text-align: center;
@@ -87,7 +87,8 @@
 					font-size: var(--fontSizeLG);
 				}
 
-				& > .date {
+				& > .date,
+				& > .price {
 					font-size: var(--fontSizeMD);
 				}
 
@@ -128,6 +129,17 @@
 					box-shadow: none;
 				}
 			}
+		}
+	}
+}
+
+.pageWishlists.wishlist {
+	ul {
+		flex-direction: column;
+		align-content: center;
+
+		li {
+			width: 100%;
 		}
 	}
 }
